# mexIPOPT

./: .gitignore  IPOPT-toolbox.prj  LICENSE  README-OSX.md  README-brew.md  README.md  README_HSL.md  README_how_to_install_ipopt.md  README_linux.md  README_linux_how_to_compile_ipopt.md  README_osx.md  README_osx_how_to_compile_ipopt.md  README_win.md
COIN/: README-coinbrew.md  coinbrew
Ipopt-3.13.2-win64-msvs2019-md/: README.txt
Ipopt-3.13.2-win64-msvs2019-md/lib/: ipopt.dll.lib  ipoptamplinterface.dll.lib
Ipopt/include/coin-or/asl/: arith.h
Ipopt/include_osx/coin-or/: IpoptConfig.h
Ipopt/include_vs/coin-or/: IpoptConfig.h  config.h  config_ipopt.h
Ipopt/include_win/coin-or/mumps/: mumps_compat.h
Ipopt/include_win_mingw/coin-or/: IpoptConfig.h
binary/: README.md
binary/dll/: ipopt.mexw64
binary/include/coin/: CoinHelperFunctions.hpp  CoinMpsIO.hpp  CoinSearchTree.hpp  CoinUtilsConfig.h  IpoptConfig.h
binary/lib/: libCoinUtils.la  libcoinblas.la  libcoinlapack.la  libcoinmetis.la  libcoinmumps.la  libipopt.la  libipoptamplinterface.la
cmake_for_ma57_77_86_97/: CMakeLists.txt
cmake_for_ma57_77_86_97/cmake/: CMakeLists-blas-lapack.txt  CMakeLists-cflags.txt  CMakeLists-common.txt  CMakeLists-cpack.txt  CMakeLists-utilities.txt
examples/: README.txt  examplelasso.m  lasso.m  test_BartholomewBiggs.m  test_McCormick.m  test_alkyl.m  test_ipopt.m
lib/: Makefile  README.txt  compile.m  compile_linux.m  compile_octave.m  compile_osx.m  compile_win.m  ipopt.m
precompiled_binary/windows/: README.md  flangrti.lib  libomp.lib
precompiled_binary/windows_mingw/: README_mingw.md  libipopt.lib
precompiled_mex/: README.txt  ipopt.mexmaci64  ipopt_no_mpi.mexmaci64
precompiled_mex/UbuntuMex64/: ipopt.mexa64
precompiled_mex/WindowsMex64/: ipopt.mexw64
src/: IpoptInterfaceCommon.cc  IpoptInterfaceCommon.hh  ipopt.cc
src_ipopt_osx/coin-or/: IpoptConfig.h
test_TRAIN/: README.txt  hfun.m  hfun_D.m  hfun_DD.m  main.m  train_NLP_constraints.m  train_NLP_constraints_jacobian.m  train_NLP_constraints_jacobian_pattern.m  train_NLP_hessian.m  train_NLP_hessian_pattern.m  train_NLP_target.m  train_NLP_target_grad.m  train_ODE.m  train_ODE_hessian.m  train_ODE_jacobian.m  train_bc.m  train_bc_hessian.m  train_bc_jacobian.m  train_target_lagrange.m  train_target_lagrange_grad.m  train_target_lagrange_hessian.m  train_target_mayer.m  train_target_mayer_grad.m  train_target_mayer_hessian.m
toolbox/: CMakeLists.txt  CompileIpoptMexLib.m  demos.xml  setup.m  setupIpoptPath.m
toolbox/doc/: GettingStarted.mlx
toolbox/examples/: examplehs038.m  examplehs051.m  examplehs071.m  examplelasso.m  libhsl.dylib  test_BartholomewBiggs.m  test_McCormick.m  test_alkyl.m  test_ipopt.m  test_ipopt2.m
toolbox/examples/html/: examplehs038.html  examplehs051.html  examplehs071.html  examplelasso.html  test_BartholomewBiggs.html  test_McCormick.html  test_alkyl.html  test_ipopt.html  test_ipopt2.html
toolbox/lib/: ipopt.m  ipopt_auxdata.m
toolbox/src/: IpoptInterfaceCommon.cc  IpoptInterfaceCommon.hh  ipopt.cc
